# stabilizer

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  Embed.toml  LICENSE.MIT  README.md  build.rs  cargosha256-dual-iir.nix  cargosha256.nix  default.nix  driver_debug.md  index.html  memory.x  miniconf.py  openocd.gdb  overview.html  pounder_test.py  print.html  release.nix  requirements.txt  searchindex.js  searchindex.json  setup.html  stabilizer.cfg  stabilizer.py  stm32h7.cfg  usage.html
.cargo/: config  config.toml
.github/: bors.toml  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  docs.yml  hitl.yml  hitl_trigger.yml  labeler.yml  release-docs.yml  release.yml
ad9912/: Cargo.toml
ad9912/src/: lib.rs
ad9959/: Cargo.toml
ad9959/src/: lib.rs
book/: .gitignore  README.md  book.toml
book/src/: SUMMARY.md  getting-started.md  overview.md  setup.md  toc.md  usage.md
docs/: Gemfile  README.md  Rakefile  _config.yml  index.md
docs/pages/: getting-started.md  networking.md  usage.md
dsp/: Cargo.toml  build.rs
dsp/benches/: cossin.rs  micro.rs  trig.rs
dsp/src/: accu.rs  atan2.rs  complex.rs  cossin.rs  iir.rs  iir_int.rs  lib.rs  lockin.rs  lowpass.rs  pll.rs  reciprocal_pll.rs  rpll.rs  testing.rs  tools.rs  trig.rs  unwrap.rs
dsp/tests/: lockin.rs  lockin_low_pass.rs
encoded_pin/: Cargo.toml
encoded_pin/src/: lib.rs
firmware/: crates.js  help.html  search-index.js  settings.html  src-files.js
firmware/ad9912/: all.html  enum.Addr.html  enum.ChargePump.html  enum.Error.html  enum.Size.html  fn.dac_fs_to_fsc.html  fn.frequency_to_ftw.html  fn.phase_to_pow.html  index.html  sidebar-items.js  struct.Ad9912.html  struct.Instruction.html  struct.PartialInstruction.html  struct.PartialPll.html  struct.PartialPower.html  struct.PartialReset.html  struct.PartialSerial.html  struct.Pll.html  struct.Power.html  struct.Reset.html  struct.Serial.html
firmware/ad9959/: all.html  enum.Address.html  enum.Error.html  enum.Mode.html  enum.Register.html  index.html  sidebar-items.js  struct.Acr.html  struct.Ad9959.html  struct.Channel.html  struct.Csr.html  struct.Fr1.html  struct.PartialAcr.html  struct.PartialCsr.html  struct.PartialFr1.html  struct.ProfileSerializer.html  trait.Interface.html  type.Channel.html
firmware/dds/: all.html  index.html  sidebar-items.js  struct.App.html  struct.Channel.html  struct.Settings.html
firmware/dual_iir/: all.html  constant.BATCH_SIZE.html  constant.IIR_CASCADE_LENGTH.html  constant.SAMPLE_PERIOD.html  constant.SAMPLE_TICKS.html  constant.SAMPLE_TICKS_LOG2.html  constant.SCALE.html  constant.UNITS.html  enum.Run.html  index.html  sidebar-items.js  struct.Active.html  struct.BiquadRepr.html  struct.Channel.html  struct.DualIir.html  struct.Settings.html
firmware/encoded_pin/: all.html  index.html  sidebar-items.js  struct.EncodedPin.html
firmware/fls/: all.html  constant.BATCH_SIZE.html  constant.BATCH_SIZE_LOG2.html  constant.DDS_LSB_PER_HZ.html  constant.F_DEMOD.html  constant.MULT_SHIFT.html  constant.PHASE_SCALE_SHIFT.html  constant.SAMPLE_TICKS.html  constant.SAMPLE_TICKS_LOG2.html  index.html  sidebar-items.js  struct.BiquadRepr.html  struct.BiquadReprTree.html  struct.Channel.html  struct.ChannelConfig.html  struct.ChannelSettings.html  struct.ChannelState.html  struct.ChannelTelemetry.html  struct.Config.html  struct.CookedTelemetry.html  struct.Dds.html  struct.DdsSettings.html  struct.Fls.html  struct.Settings.html  struct.State.html  struct.Stream.html  struct.StreamChannel.html  struct.Telemetry.html  type.LockinLowpass.html
firmware/idsp/: all.html  constant.CORDIC_CIRCULAR_GAIN.html  constant.CORDIC_HYPERBOLIC_GAIN.html  enum.SweepError.html  enum.Wrap.html  fn.atan2.html  fn.cos_sin.html  fn.cosh_sinh.html  fn.cossin.html  fn.div.html  fn.mul.html  fn.overflowing_sub.html  fn.saturating_scale.html  fn.sqrt_atan2.html  fn.sqrt_atanh2.html  index.html  sidebar-items.js  struct.Accu.html  struct.AccuOsc.html  struct.Cascade.html  struct.Cic.html  struct.ClampWrap.html  struct.Complex.html  struct.Dsm.html  struct.Lockin.html  struct.Lowpass.html  struct.LowpassState.html  struct.Nyquist.html  struct.PLL.html  struct.PLLState.html  struct.RPLL.html  struct.RPLLConfig.html  struct.Repeat.html  struct.Sweep.html  struct.Unwrapper.html  trait.Build.html  trait.Clamp.html  trait.Coefficient.html  trait.ComplexExt.html  trait.Filter.html  (+3 more)
firmware/lockin/: all.html  constant.BATCH_SIZE.html  constant.BATCH_SIZE_LOG2.html  constant.SAMPLE_TICKS.html  constant.SAMPLE_TICKS_LOG2.html  enum.Conf.html  enum.LockinMode.html  index.html  (+3 more)
hitl/: README.md  loopback.py  run.sh  streaming.py
iir/: Cargo.toml
lockin/: Cargo.toml
miniconf-py/: .gitignore  README.md  setup.py
nix/: channel-rust-nightly.toml  fetchcargo.nix  rustPlatform.nix  stabilizer.nix
platform/: Cargo.toml
platform/src/: delay.rs  dfu.rs  flash.rs  lib.rs  metadata.rs  mqtt_app.rs  settings.rs  telemetry.rs
py/: .gitignore  README.md  publisher.py  pyproject.toml  setup.py
py/stabilizer/: __init__.py  fnc_pid_controller.py  iir_biquad_filter.py  iir_coefficients.py  iir_coefficients_1_filter.py  mpll.py  plot_iir_frequency_response.py  search.py  stream.py  telemetry.py  tests.ipynb  watch.py
scripts/: dual_iir_configuration.py  requirements.txt  stream_throughput.py
serial-settings/: Cargo.toml  README.md
serial-settings/src/: interface.rs  lib.rs
serial_settings/: Cargo.toml  README.md
serial_settings/src/: lib.rs
signal_generator/: Cargo.toml
signal_generator/src/: lib.rs
src/: adc.rs  afe.rs  board.rs  configuration.rs  convert.rs  dac.rs  design_parameters.rs  digital_input_stamper.rs  eeprom.rs  eth.rs  fls.rs  hrtimer.rs  i2c.rs  iir.rs  lib.rs  lockin.rs  main.rs  mpll.rs  net.rs  sampling_timer.rs  server.rs  settings.rs  startup.S  statistics.rs  telemetry.rs  timers.rs
stabilizer/: Cargo.toml
stream/: Cargo.toml
stream/src/: lib.rs  stream.rs
urukul/: Cargo.toml
urukul/src/: lib.rs
waveforms/: ampl_VCO.dwf3work  scope_wavegen.dwf3work
(+2132 files in other folders)
