[package]
name = "stabilizer"
# Keep versions in Cargo.toml and py/setup.py synchronized.
version = "0.11.0"
resolver = "2"
authors = [
	"Robert Jördens <rj@quartiq.de>",
	"Ryan Summers <ryan.summers@vertigo-designs.com>",
]
description = "Firmware for the Sinara Stabilizer board (STM32H743, Ethernet, PoE, 2 ADCs, 2 DACs)"
categories = ["embedded", "no-std", "hardware-support", "science"]
license = "MIT OR Apache-2.0"
keywords = ["ethernet", "stm32h7", "adc", "dac", "physics"]
repository = "https://github.com/quartiq/stabilizer"
readme = "README.md"
documentation = "https://docs.rs/stabilizer/"
edition = "2021"
exclude = ["doc/", "doc/*"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = []
default-target = "thumbv7em-none-eabihf"

[workspace]
members = [
	"ad9912",
	"ad9959",
	"encoded_pin",
	"serial-settings",
	"urukul",
	"signal_generator",
	"stream",
	"platform",
]

[dependencies]
panic-persist = { version = "0.3", features = ["utf8", "custom-panic-handler"] }
embedded-storage = "0.3"
embedded-storage-async = "0.4"
cortex-m = { version = "0.7.7", features = [
	"inline-asm",
	"critical-section-single-core",
] }
cortex-m-rt = { version = "0.7", features = ["device"] }
log = { version = "0.4", features = [
	"max_level_trace",
	"release_max_level_info",
] }
rtt-target = "0.3"
serde = { version = "1.0", features = ["derive"], default-features = false }
heapless = { version = "0.8", features = ["serde"] }
rtic = { version = "2.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0", features = ["cortex-m-systick"] }
num_enum = { version = "0.7.3", default-features = false }
paste = "1"
idsp = "0.18.0"
ad9959 = { path = "ad9959", version = "0.3.0" }
serial-settings = { version = "0.2", path = "serial-settings" }
mcp230xx = "1.0"
fugit = "0.3"
rtt-logger = "0.2"
mono-clock = "0.1"
spin = { version = "0.10", default-features = false, features = ["spin_mutex"] }
shared-bus = { version = "0.3", features = ["cortex-m"] }
lm75 = "0.2"
usb-device = "0.3.2"
usbd-serial = "0.2"
# Keep this synced with the miniconf version in py/setup.py
miniconf = { version = "0.19", features = ["json-core", "derive", "postcard"] }
miniconf_mqtt = { version = "0.19" }
tca9539 = "0.2"
bitbybit = "1.3.3"
arbitrary-int = { version = "1.3.0", features = ["serde", "hint"] }
thiserror = { version = "2.0.11", default-features = false }
embedded-hal-compat = "0.13.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
	"unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus = "0.3.0"
urukul = { version = "0.1.1", path = "urukul" }
ad9912 = { version = "0.1.1", path = "ad9912" }
bytemuck = { version = "1.21.0", features = ["zeroable_maybe_uninit"] }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
grounded = "0.2.0"
signal_generator = { version = "0.1", path = "signal_generator" }
stream = { version = "0.1", path = "stream" }
platform = { version = "0.1", path = "platform" }

[dependencies.stm32h7xx-hal]
version = "0.16.0"
features = ["stm32h743v", "rt", "ethernet", "xspi", "usb_hs"]
git = "https://github.com/stm32-rs/stm32h7xx-hal.git"

[dependencies.smoltcp-nal]
version = "0.6"
features = ["shared-stack"]
git = "https://github.com/quartiq/smoltcp-nal.git"

[build-dependencies]
built = { version = "0.8", features = ["git2"], default-features = false }

[features]
nightly = []
pounder_v1_0 = []

[profile.dev]
codegen-units = 1
opt-level = "s"
incremental = false

[profile.release.package.idsp]
opt-level = 3

[profile.release.package.stabilizer]
opt-level = 3

[profile.release.package.ad9959]
opt-level = 3

[profile.release.package.signal_generator]
opt-level = 3

[profile.release.package.stream]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "s"
debug = true
lto = true

[patch.crates-io]
miniconf = { path = "../miniconf/miniconf" }
miniconf_derive = { path = "../miniconf/miniconf_derive" }
miniconf_mqtt = { path = "../miniconf/miniconf_mqtt" }
idsp = { path = "../idsp" }
