[package]
name = "ad9912"
version = "0.1.1"
edition = "2021"
description = "AD9912 1 GHz DDS SPI driver"
authors = [
	"Robert Jördens <rj@quartiq.de>",
]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
keywords = ["spi"]
repository = "https://github.com/quartiq/stabilizer"

[dependencies]
arbitrary-int = { version = "1.3.0", features = ["serde"] }
thiserror = { version = "2.0.7", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
embedded-hal = { version = "1.0" }
bitbybit = "1.3.3"
