[package]
name = "ad9912"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.1"
description = "AD9912 1 GHz DDS SPI driver"
authors = [
	"Robert Jördens <rj@quartiq.de>",
]
categories = ["embedded", "no-std"]
keywords = ["spi"]

[dependencies]
arbitrary-int = { version = "2.0.0", features = ["serde"] }
thiserror = { version = "2.0.11", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
embedded-hal = { version = "1.0" }
bitbybit = "1.3.3"
