[package]
name = "ad9959"
version = "0.2.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "AD9959 4-channel DDS SPI driver"
documentation = "https://docs.rs/ad9959/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version = "0.2.7", features = ["unproven"]}
bit_field = "0.10.0"
bytemuck = "1.12.1"
bitflags = "1.3.2"
