[package]
name = "ad9959"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.3.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
description = "AD9959 4-channel DDS SPI driver"

[dependencies]
embedded-hal = {version = "0.2.7", features = ["unproven"]}
bytemuck = "1.21.0"
bitbybit = "1.3.3"
arbitrary-int = { version = "2.0.0", features = ["serde"] }
