[package]
name = "dsp"
version = "0.1.0"
authors = ["Robert Jördens <rj@quartiq.de>"]
edition = "2018"

[dependencies]
libm = "0.2.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
generic-array = "0.14"
num = { version = "0.3.1", default-features = false }
miniconf = "0.1"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
ndarray = "0.14"

[[bench]]
name = "micro"
harness = false

[features]
nightly = []
