[package]
name = "dsp"
version = "0.1.0"
authors = ["Robert Jördens <rj@quartiq.de>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
num-complex = { version = "0.4.0", features = ["serde"], default-features = false }
miniconf = "0.1"

[dev-dependencies]
easybench = "1.0"
rand = "0.8"
ndarray = { default-features = false, version = "0.15" }

[[bench]]
name = "micro"
harness = false

[features]
nightly = []
