[package]
name = "dsp"
version = "0.1.0"
resolver = "2"
authors = ["Robert Jördens <rj@quartiq.de>"]
edition = "2018"
license = "MIT OR Aapache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
num-complex = { version = "0.4.0", features = ["serde"], default-features = false }
miniconf = "0.1"

[dev-dependencies]
easybench = "1.0"
rand = "0.8"
ndarray = "0.15"

[[bench]]
name = "micro"
harness = false

[features]
nightly = []
