[package]
name = "platform"
version = "0.1.0"
edition = "2024"
description = "STM32 MQTT Application platform"
authors = ["Robert Jördens <rj@quartiq.de>"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
keywords = []
repository = "https://github.com/quartiq/stabilizer"

[dependencies]
miniconf = { version = "0.19", features = ["derive", "heapless", "postcard"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
heapless = { version = "0.8", features = ["serde"] }
log = { version = "0.4" }
cortex-m = { version = "0.7.7" }
sequential-storage = "4"
serial-settings = { version = "0.2", path = "../serial-settings" }
embedded-storage = "0.3"
embedded-storage-async = "0.4"
postcard = "1"
embedded-io = "0.6"
embassy-futures = { version = "0.1", default-features = false }

[dependencies.smoltcp-nal]
version = "0.6"
features = ["shared-stack"]
git = "https://github.com/quartiq/smoltcp-nal.git"
