[package]
name = "serial-settings"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Embedded device settings management over serial terminal and flash"
authors = [
	"Robert Jördens <rj@quartiq.de>",
	"Ryan Summers <ryan.summers@vertigo-designs.com>",
]
categories = ["embedded", "no-std", "config", "command-line-interface"]
license = "MIT OR Apache-2.0"
keywords = ["serial", "settings", "cli", "management", "async"]
repository = "https://github.com/quartiq/stabilizer"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
miniconf = { version = "0.13", features = ["json-core", "postcard"] }
menu = { version = "0.6", features = ["echo"], git = "https://github.com/rust-embedded-community/menu.git", rev = "ac34f7c" }
heapless = "0.8"
embedded-io = "0.6"
yafnv = "3.0"
postcard = "1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
