[package]
name = "serial_settings"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Embedded device settings management over serial terminal and flash"
authors = [
	"Robert Jördens <rj@quartiq.de>",
	"Ryan Summers <ryan.summers@vertigo-designs.com>",
]
categories = ["embedded", "no-std", "config", "command-line-interface"]
keywords = ["serial", "settings", "cli", "management", "async"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
miniconf = { version = "0.20", features = ["json-core", "postcard"] }
menu = { version = "0.6.1", features = ["echo"] }
heapless = "0.8"
embedded-io = "0.6"
yafnv = "3.0"
postcard = "1"
log = { version = "0.4", features = [
	"max_level_trace",
	"release_max_level_info",
] }
