[package]
name = "signal_generator"
version = "0.1.0"
edition = "2024"
description = "Signal genrator DSP"
authors = [
	"Robert Jördens <rj@quartiq.de>",
]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
keywords = []
repository = "https://github.com/quartiq/stabilizer"

[dependencies]
rand_xorshift = "0.4.0"
rand_core = "0.9.0"
thiserror = { version = "2.0.11", default-features = false }
idsp = "0.18.0"
miniconf = { version = "0.19", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
