[package]
name = "signal_generator"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"
description = "Signal genrator DSP"
authors = [
	"Robert Jördens <rj@quartiq.de>",
]
categories = ["embedded", "no-std"]
keywords = []

[dependencies]
rand_xorshift = "0.4.0"
rand_core = "0.9.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror.workspace = true
idsp.workspace  = true
miniconf.workspace = true
