[package]
name = "urukul"
version = "0.1.1"
edition = "2021"
description = "Sinara Urukul quad 1 GHz DDS driver"
authors = [
	"Robert Jördens <rj@quartiq.de>",
]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
keywords = ["spi"]
repository = "https://github.com/quartiq/stabilizer"

[dependencies]
encoded_pin = { version = "0.1", path = "../encoded_pin" }
arbitrary-int = { version = "1.3.0", features = ["serde", "hint"] }
thiserror = { version = "2.0.11", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-bus = "0.3.0"
bitbybit = "1.3.3"
ad9912 = { version = "0.1.1", path = "../ad9912" }
log = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false }
