[package]
name = "urukul"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.1"
description = "Sinara Urukul quad 1 GHz DDS driver"
authors = ["Robert Jördens <rj@quartiq.de>"]
categories = ["embedded", "no-std"]
keywords = ["spi"]

[dependencies]
encoded_pin = { version = "0.1", path = "../encoded_pin" }
arbitrary-int.workspace = true
thiserror.workspace = true
num-traits = { version = "0.2.19", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-bus = "0.3.0"
bitbybit = "1.3.3"
ad9912 = { version = "0.1.1", path = "../ad9912" }
log = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false }
